# hackathon-2-pahse-2

./: .gitignore  CLAUDE.md  DEPLOYMENT_GUIDE.md  README.md
.claude/commands/: sp.adr.md
.specify/memory/: constitution.md
backend/: alembic.ini  pyproject.toml  reset_db.py
backend/migrations/: env.py
backend/migrations/versions/: 94d2a79a1181_create_users_and_tasks_tables.py
backend/src/: main.py
backend/src/api/: deps.py
backend/src/api/v1/: auth.py  tasks.py
backend/src/config/: settings.py
backend/src/db/: session.py
backend/src/middleware/: cors.py  error_handler.py  jwt_middleware.py
backend/src/models/: task.py  user.py
backend/src/repositories/: task_repository.py  user_repository.py
backend/src/services/: auth_service.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/students/: page.tsx
frontend/src/app/tasks/: page.tsx
frontend/src/components/auth/: LoginForm.tsx  RegisterForm.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx
frontend/src/components/students/: StudentForm.tsx  StudentsClientPage.tsx  (+1 more)
frontend/src/hooks/: useAuth.ts  useTasks.ts
frontend/src/types/: auth.ts  task.ts
history/prompts/001-multi-user-todo-app/: 001-create-multi-user-todo-spec.spec.prompt.md  002-create-implementation-plan.plan.prompt.md  003-generate-implementation-tasks.tasks.prompt.md
history/prompts/constitution/: 001-establish-todo-app-constitution.constitution.prompt.md
(+12 files in other folders)
